Ya se pueden subir los registros a la BD

--- a/public/Style.css
+++ b/public/Style.css
@@ -5,3 +5,14 @@ font-family: 'Courier New', Courier, monospace;
 font-weight: 800;
 
 }
+.Inputs
+{
+display: flex;
+flex-direction: column;
+max-width: 5cm;
+}
+input{
+    margin-bottom:0.1cm;
+
+
+}
